	correct digest without regard to the current coding system.
	For very long object, the function `sha1' uses an external program
	and coding system for the program is not correctly specified.
	Therefore, the result may depend on the current coding system.
	The new function is an alternative without the above problem.
	(twittering-hmac-sha1): use `twittering-sha1' instead of `sha1'.

2011-06-26  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Revise the routine for the format specifier
	"%C".
	(twittering-make-string-with-uri-property): new function.
	(twittering-generate-formater-for-first-spec): use the function
	`twittering-make-string-with-uri-property' for the format
	specifier "%C".
	(twittering-make-time-string): removed.

	* twittering-mode.el: Add a function to go to the next/previous
	URI explicitly written in a tweet.
	(twittering-make-fontified-tweet-text): add uri-origin property to
	URIs explicitly written in a tweet.
	(twittering-get-next-thing-pos): new function.
	(twittering-goto-next-thing): ignore things except URIs explicitly
	written in a tweet if a prefix argument is given.
	(twittering-goto-previous-thing): likewise.
	(twittering-goto-next-uri): new function.
	(twittering-goto-previous-uri): new function.

	* twittering-mode.el: Wait a moment after finding that the process
	is dead and the query has not been finished. This prevents Emacs
	from canceling the query on the middle of evaluating the
	sentinel.
	(twittering-wait-while): new macro.
	(twittering-oauth-get-token-alist): wait a moment after finding
	that the process is dead and the query has not been finished. This
	prevents Emacs from canceling the query on the middle of
	evaluating the sentinel.
	(twittering-tinyurl-get): likewise.
	(twittering-verify-credentials): likewise.
	(twittering-get-list-sync): likewise.

	* twittering-mode.el: Correctly ensure an available connection
	method even if SSL is unavailable.